Fix: Adjust sizing and spacing of input field and convert button for visibility and aesthetics

--- a/style.css
+++ b/style.css
@@ -11,16 +11,28 @@ body {
 
 main {
     align-items: center;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    gap: 20px;
+    padding-top: 20%;
+}
+
+#number {
+    text-align: center;
 }
 
 #convert-btn {
     background-color: #00b4d8;
+    height: 40px;
+    width: 70px;
+}
+
+#number, #convert-btn {
     border: none;
     border-radius: 3px;
     font-size: 16px;
     font-weight: 500;
-    height: 40px;
-    width: 70px;
+    height: 35px;
+    width: 150px;
 }
